refactor:代码重构，增加了interview app
